# Omnipotence

./: .gitignore  README.md
docker/: how_to_run.txt  test.sh
docker/allan_variance/.devcontainer/: Dockerfile  devcontainer.json
docker/allan_variance/config/: equations.txt  how_to_calibrate.txt  oakd_imu.yaml
docker/allan_variance/config/first_run/: allan_variance.csv
docker/allan_variance/config/long_run/: allan_variance.csv
docker/kalibr/.devcontainer/: Dockerfile  devcontainer.json
docker/kalibr/config/: aprilgrid.yaml  camchain-first_run.yaml  how_to_kalibr.txt  imu.yaml  results-cam-first_run.txt
docker/ros1/: Dockerfile  build.sh  core.sh  run.sh
docker/ros1/.devcontainer/: Dockerfile  devcontainer.json
docker/ros1/config/: cameras.yaml  how_to_tagslam.txt  tagslam.launch  tagslam.yaml
docker/ros2/: Dockerfile  build.sh  core.sh  run.sh
docker/ros2/.devcontainer/: Dockerfile  devcontainer.json
docker/ros_bridge/: Dockerfile  build.sh  core.sh  run.sh
docker/ros_bridge/.devcontainer/: Dockerfile  devcontainer.json
docker/ros_bridge/config/: how_to_bridge.txt
docker/tagslam/: bob.yaml  camera_poses.yaml  cameras.yaml  tagslam.launch  tagslam.yaml
docker/test/.devcontainer/: Dockerfile  devcontainer.json
docker/test/hello/: .gitconfig  world.txt
docker/test/hello/.gnupg/: pubring.kbx  trustdb.gpg
docker/test/hello/.ssh/: known_hosts
ros2_ws/src/apriltag_msgs/: CMakeLists.txt
ros2_ws/src/apriltag_ros/: CMakeLists.txt
ros2_ws/src/apriltag_translator/: CMakeLists.txt  package.xml
ros2_ws/src/camera_driver/: CMakeLists.txt  how_to_camera.txt  package.xml
ros2_ws/src/camera_driver/config/: camera_driver_config.yaml  camera_seven_calibration.yaml
ros2_ws/src/camera_driver/include/camera_driver/cameramanager/: CameraManager.hpp
ros2_ws/src/camera_driver/launch/: camera_driver.launch.py
ros2_ws/src/camera_driver/src/: Main.cpp
ros2_ws/src/camera_driver_srvs/: CMakeLists.txt  package.xml
ros2_ws/src/depthai_handler/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot/: CMakeLists.txt
ros2_ws/src/pose_estimator/: CMakeLists.txt  package.xml
ros_bridge/: build.sh  how_to_setup.txt
ros_bridge/bridge_ws/src/: hello.txt
src/my_robot/: package.xml
src/my_robot/launch/: view_robot.launch.py
(+25 files in other folders)
